# rules_nodejs-builds

./: README.md
@bazel_create/: index.js  package.json
@bazel_cypress/: BUILD  README.md  index.bzl  package.json
@bazel_cypress/internal/: cypress_repositories.bzl  cypress_repository.bzl  cypress_web_test.bzl  template.cypress_web_test.bzl
@bazel_esbuild/: BUILD  README.md  esbuild.bzl  esbuild_repositories.bzl  index.bzl  package.json
@bazel_esbuild/toolchain/: BUILD.bazel  package-lock.json  package.json  toolchain.bzl
@bazel_hide-bazel-files/: package.json
@bazel_jasmine/: README.md  jasmine_node_test.bzl  jasmine_runner.js  package.json
@bazel_karma/: package.json
@bazel_labs/: README.md  index.bzl  package.bzl  package.json
@bazel_labs/grpc_web/: BUILD.bazel  README.md  ts_proto_library.bzl
@bazel_labs/protobufjs/: BUILD.bazel  ts_proto_library.bzl
@bazel_protractor/: README.md  package.json  protractor-utils.js  protractor_web_test.bzl
@bazel_rollup/: README.md  package.json  rollup_bundle.bzl
@bazel_runfiles/: package.json  runfiles.d.ts  runfiles.js
@bazel_terser/: README.md  package.json  terser_minified.bzl
@bazel_typescript/: README.md  package.json
@bazel_typescript/internal/: build_defs.bzl  ts_project.bzl  ts_project_options_validator.js
@bazel_typescript/internal/tsc_wrapped/: compiler_host.js  diagnostics.js  strict_deps.js  tsc_wrapped.js  tsconfig.d.ts  worker.js
@bazel_worker/: index.js  package.json
build_bazel_rules_nodejs/: BUILD.bazel  index.bzl  npm_deps.bzl  providers.bzl
(+57 files in other folders)
