# bazel_skylib mocked out
# load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@build_bazel_rules_nodejs//:index.bzl", bzl_library = "dummy_bzl_library")
load("//@bazel/esbuild:esbuild_packages.bzl", "ESBUILD_PACKAGES")
load(":toolchain.bzl", "configure_esbuild_toolchains")

exports_files([
    "package.json",
    "package-lock.json",
])

toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

configure_esbuild_toolchains(
    platforms = ESBUILD_PACKAGES.platforms,
)

bzl_library(
    name = "bzl",
    srcs = [
        "toolchain.bzl",
    ],
    visibility = ["//@bazel/esbuild:__pkg__"],
)

filegroup(
    name = "srcs",
    srcs = [
        "BUILD.bazel",
        "package.json",
        "package-lock.json",
        "toolchain.bzl",
    ],
    visibility = ["//@bazel/esbuild:__pkg__"],
)
